<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/github_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/cloud"
        android:translationZ="10dp"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bgCard"
        android:layout_width="0dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/midnight_blue"
        app:cardCornerRadius="20dp"
        android:translationY="-20dp"
        android:translationZ="-5dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                >
                <TextView
                    android:id="@+id/tvNama"
                    android:text="@string/nama_user"
                    style="@style/TextViewTitle.Black"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvUsername"
                    android:text="@string/username"
                    style="@style/TextViewSubTitle.BlueGrey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvNama"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tvCompany"
                    android:text="@string/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tvLocation"
                    android:text="@string/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompany"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFollow"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_text"
                    android:backgroundTint="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocation"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp"
                    app:cornerRadius="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="horizontal" android:weightSum="3"
                    android:gravity="center"
                    android:background="@drawable/top_border">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:background="@drawable/right_border">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewFooter"
                            android:text="@string/repo_text"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvRepo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewFooter.Orange"
                            android:text="@string/repo_count"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewFooter"
                            android:text="@string/follower_text"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvFollower"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewFooter.Orange"
                            android:text="@string/follower_count"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:background="@drawable/left_border">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewFooter"
                            android:text="@string/following_text"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvFollowing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewFooter.Orange"
                            android:text="@string/following_count"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationZ="10dp"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>